fix form size and set clear with visible.

--- a/admin.scss
+++ b/admin.scss
@@ -106,6 +106,12 @@ table.list{
 form
 {
   width:800px;
+
+  &:after{
+    content:"";
+    display:block;
+    clear:both;
+  }
 }
 
 form
@@ -266,6 +272,7 @@ th.action-delete{
 
 .clear{
   clear:both;
+  visibility: visible;
 }
 
 /*page edit*/
